<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.amssolucoes.controlefinanceiro.CadastroUsuarioActivity">

    <EditText
        android:id="@+id/EdtCadUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_usuario" />

    <EditText
        android:id="@+id/EdtCadSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_senha"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/EdtCadApelido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_apelido" />

    <Button
        android:id="@+id/BtnCadUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botao_cadastrar" />



</LinearLayout>
